; ModuleID = '/home/carl/AnghaBench/esp-idf/components/protocomm/src/transports/extr_protocomm_nimble.c_simple_ble_start.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/protocomm/src/transports/extr_protocomm_nimble.c_simple_ble_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, i32, i32 }
%struct.TYPE_7__ = type { i32, i32, i32* }
%struct.TYPE_6__ = type { i32 }

@ble_cfg_p = common dso_local global i8* null, align 8
@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"Free mem at start of simple_ble_init %d\00", align 1
@simple_ble_on_reset = common dso_local global i32 0, align 4
@ble_hs_cfg = common dso_local global %struct.TYPE_8__ zeroinitializer, align 4
@simple_ble_on_sync = common dso_local global i32 0, align 4
@gatt_svr_register_cb = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [31 x i8] c"Error initializing GATT server\00", align 1
@.str.2 = private unnamed_addr constant [26 x i8] c"Error setting device name\00", align 1
@resp_data = common dso_local global %struct.TYPE_7__ zeroinitializer, align 8
@nimble_host_task = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*)* @simple_ble_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @simple_ble_start(%struct.TYPE_6__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  %5 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %6 = bitcast %struct.TYPE_6__* %5 to i8*
  store i8* %6, i8** @ble_cfg_p, align 8
  %7 = load i32, i32* @TAG, align 4
  %8 = call i32 (...) @esp_get_free_heap_size()
  %9 = call i32 @ESP_LOGD(i32 %7, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = call i32 (...) @esp_nimble_hci_and_controller_init()
  %11 = call i32 @ESP_ERROR_CHECK(i32 %10)
  %12 = call i32 (...) @nimble_port_init()
  %13 = load i32, i32* @simple_ble_on_reset, align 4
  store i32 %13, i32* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @ble_hs_cfg, i32 0, i32 2), align 4
  %14 = load i32, i32* @simple_ble_on_sync, align 4
  store i32 %14, i32* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @ble_hs_cfg, i32 0, i32 1), align 4
  %15 = load i32, i32* @gatt_svr_register_cb, align 4
  store i32 %15, i32* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @ble_hs_cfg, i32 0, i32 0), align 4
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %17 = call i32 @gatt_svr_init(%struct.TYPE_6__* %16)
  store i32 %17, i32* %4, align 4
  %18 = load i32, i32* %4, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %1
  %21 = load i32, i32* @TAG, align 4
  %22 = call i32 @ESP_LOGE(i32 %21, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0))
  %23 = load i32, i32* %4, align 4
  store i32 %23, i32* %2, align 4
  br label %48

24:                                               ; preds = %1
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @ble_svc_gap_device_name_set(i32 %27)
  store i32 %28, i32* %4, align 4
  %29 = load i32, i32* %4, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %35

31:                                               ; preds = %24
  %32 = load i32, i32* @TAG, align 4
  %33 = call i32 @ESP_LOGE(i32 %32, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.2, i64 0, i64 0))
  %34 = load i32, i32* %4, align 4
  store i32 %34, i32* %2, align 4
  br label %48

35:                                               ; preds = %24
  %36 = call i64 (...) @ble_svc_gap_device_name()
  %37 = inttoptr i64 %36 to i8*
  %38 = bitcast i8* %37 to i32*
  store i32* %38, i32** getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @resp_data, i32 0, i32 2), align 8
  %39 = load i32*, i32** getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @resp_data, i32 0, i32 2), align 8
  %40 = icmp ne i32* %39, null
  br i1 %40, label %41, label %44

41:                                               ; preds = %35
  %42 = call i64 (...) @ble_svc_gap_device_name()
  %43 = call i32 @strlen(i64 %42)
  store i32 %43, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @resp_data, i32 0, i32 1), align 4
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @resp_data, i32 0, i32 0), align 8
  br label %44

44:                                               ; preds = %41, %35
  %45 = call i32 (...) @ble_store_config_init()
  %46 = load i32, i32* @nimble_host_task, align 4
  %47 = call i32 @nimble_port_freertos_init(i32 %46)
  store i32 0, i32* %2, align 4
  br label %48

48:                                               ; preds = %44, %31, %20
  %49 = load i32, i32* %2, align 4
  ret i32 %49
}

declare dso_local i32 @ESP_LOGD(i32, i8*, i32) #1

declare dso_local i32 @esp_get_free_heap_size(...) #1

declare dso_local i32 @ESP_ERROR_CHECK(i32) #1

declare dso_local i32 @esp_nimble_hci_and_controller_init(...) #1

declare dso_local i32 @nimble_port_init(...) #1

declare dso_local i32 @gatt_svr_init(%struct.TYPE_6__*) #1

declare dso_local i32 @ESP_LOGE(i32, i8*) #1

declare dso_local i32 @ble_svc_gap_device_name_set(i32) #1

declare dso_local i64 @ble_svc_gap_device_name(...) #1

declare dso_local i32 @strlen(i64) #1

declare dso_local i32 @ble_store_config_init(...) #1

declare dso_local i32 @nimble_port_freertos_init(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
